# bluetooth-daemon

./: README.md  meson.build
.github/workflows/: main.yml
data/: bluetooth-daemon.desktop  bluetooth-daemon.metainfo.xml  bluetooth.desktop  gschema.xml  meson.build
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+171 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+171 more)
src/: Application.vala  meson.build
src/Dialog/: BtReceiver.vala  BtScan.vala  BtSender.vala  DeviceRow.vala  Pair.vala  ReceiverDialog.vala  ScanDialog.vala  SenderDialog.vala
src/Services/: Agent.vala  Manager.vala  ObexAgent.vala
