executable(
    meson.project_name(),
    'Application.vala',
    'Services' / 'Adapter.vala',
    'Services' / 'Device.vala',
    'Services' / 'Manager.vala',
    'Services' / 'ObexAgent.vala',
    'Services' / 'Session.vala',
    'Services' / 'Transfer.vala',
    'Dialog' / 'BtReceiver.vala',
    'Dialog' / 'BtSender.vala',
    'Dialog' / 'ScanDialog.vala',
    'Dialog' / 'DeviceRow.vala',
    dependencies : [
        granite_dep,
        gtk_dep,
    ],
    install : true
)
