executable(
    meson.project_name(),
    'Application.vala',
    'Services' / 'Adapter.vala',
    'Services' / 'Agent.vala',
    'Services' / 'Device.vala',
    'Services' / 'Manager.vala',
    'Services' / 'ObexAgent.vala',
    'Services' / 'Session.vala',
    'Services' / 'Transfer.vala',
    'Dialog' / 'BtReceiver.vala',
    'Dialog' / 'SenderDialog.vala',
    'Dialog' / 'BtScan.vala',
    'Dialog' / 'DeviceRow.vala',
    'Dialog' / 'Pair.vala',
    dependencies : [
        granite_dep,
        gtk_dep,
    ],
    install : true
)
